--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,45 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/icons/icon-48x48.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="theme-color" content="#fff" />
+
+    <!-- Primary Meta Tags -->
+<title>Menus | Friend's Food Restaurant, commandez maintenant </title>
+<meta name="title" content="Menus | Friend's Food Restaurant, commandez maintenant " />
+<meta name="description" content="Le nouveau local Friend's Food Bonamoussadi est situé au carrefour JC, en face de la station neptune, collé à Axa  Assurance. Pour passer du temps avec vos amis après le travail et savourer des plats savoureux, rendez-vous au restaurant Friend’s Food, Bonamoussadi tenu par l’illustre Chef Stephane Nounamo." />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://resgest.netlify.io/" />
+<meta property="og:title" content="Menus | Friend's Food Restaurant, commandez maintenant " />
+<meta property="og:description" content="Le nouveau local Friend's Food Bonamoussadi est situé au carrefour JC, en face de la station neptune, collé à Axa  Assurance. Pour passer du temps avec vos amis après le travail et savourer des plats savoureux, rendez-vous au restaurant Friend’s Food, Bonamoussadi tenu par l’illustre Chef Stephane Nounamo." />
+<meta property="og:image" content="https://resgest.netlify.io/about.png" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://resgest.netlify.io/" />
+<meta property="twitter:title" content="Menus | Friend's Food Restaurant, commandez maintenant " />
+<meta property="twitter:description" content="Le nouveau local Friend's Food Bonamoussadi est situé au carrefour JC, en face de la station neptune, collé à Axa  Assurance. Pour passer du temps avec vos amis après le travail et savourer des plats savoureux, rendez-vous au restaurant Friend’s Food, Bonamoussadi tenu par l’illustre Chef Stephane Nounamo." />
+<meta property="twitter:image" content="https://resgest.netlify.io/about.png" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
+
+<link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/icon-192x192.png" />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script>
+ 
+      //if browser support service worker
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('%PUBLIC_URL%/sw.js');
+      };
+    </script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,7 +50,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+ 
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
