integration du dashboard responsive

--- a/public/index.html
+++ b/public/index.html
@@ -16,14 +16,14 @@
 <meta property="og:url" content="https://resgest.netlify.io/" />
 <meta property="og:title" content="Menus | Friend's Food Restaurant, commandez maintenant " />
 <meta property="og:description" content="Le nouveau local Friend's Food Bonamoussadi est situé au carrefour JC, en face de la station neptune, collé à Axa  Assurance. Pour passer du temps avec vos amis après le travail et savourer des plats savoureux, rendez-vous au restaurant Friend’s Food, Bonamoussadi tenu par l’illustre Chef Stephane Nounamo." />
-<meta property="og:image" content="https://resgest.netlify.io/about.png" />
+<meta property="og:image" content="%PUBLIC_URL%/about.webp" />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content="https://resgest.netlify.io/" />
 <meta property="twitter:title" content="Menus | Friend's Food Restaurant, commandez maintenant " />
 <meta property="twitter:description" content="Le nouveau local Friend's Food Bonamoussadi est situé au carrefour JC, en face de la station neptune, collé à Axa  Assurance. Pour passer du temps avec vos amis après le travail et savourer des plats savoureux, rendez-vous au restaurant Friend’s Food, Bonamoussadi tenu par l’illustre Chef Stephane Nounamo." />
-<meta property="twitter:image" content="https://resgest.netlify.io/about.png" />
+<meta property="twitter:image" content="%PUBLIC_URL%/about.webp" />
 
 <!-- Meta Tags Generated with https://metatags.io -->
 
